邮件分类、总结存储步骤完善

--- a/Setup/Prompt_config.json
+++ b/Setup/Prompt_config.json
@@ -10,5 +10,10 @@
           "诈骗骚扰内容": 1
         },
         "RESPONSE_FORMAT_INSTRUCTION": "请以严格的 JSON 格式回复，结构必须是: {{\"score\": \"地址评分,整型\", \"summary\": \"总结内容,字符串\"}}，不要包含任何解释或额外的文本。"
+    },
+  "SUMMARY": {
+        "SYSTEM_PROMPT": "你是一个专业的邮件内容提取和总结助理。你的任务是为邮件内容提供一个简洁、准确的中文概括。请严格按照 JSON 格式回复。",
+        "SUMMARY_TASK": "请分析以下邮件的主题和正文，提供一个少于 100 字的简洁总结。总结必须聚焦于邮件的核心目的或关键信息。",
+        "RESPONSE_FORMAT_INSTRUCTION": "请以严格的 JSON 格式回复，结构必须是: {{\"summary\": \"简洁的中文总结内容,字符串\"}}，不要包含任何解释或额外的文本。"
     }
 }
