--- a/Setup/AI_config.json
+++ b/Setup/AI_config.json
@@ -1,6 +1,6 @@
 {
   "GEMINI_API": {
-    "API_KEY": "AIzaSyB4mgVeZVLzofu_fEBIn_VhNfg7rm-XpLc",
+    "API_KEY": "YOUR API KEY",
     "MODEL_NAME": "gemini-2.5-flash"
   }
 }
