邮件内容获取、过滤问题修复； 修改了部分提示词；

--- a/Setup/Prompt_config.json
+++ b/Setup/Prompt_config.json
@@ -6,7 +6,7 @@
           "各类安全警告": 5,
           "正常事务往来": 4,
           "各类系统通知": 3,
-          "推广等垃圾内容": 2,
+          "广告、推广形式的通知等垃圾内容": 2,
           "诈骗骚扰内容": 1
         },
         "RESPONSE_FORMAT_INSTRUCTION": "请以严格的 JSON 格式回复，结构必须是: {{\"score\": \"地址评分,整型\", \"summary\": \"总结内容,字符串\"}}，不要包含任何解释或额外的文本。"
