--- a/Setup/mail_config.json
+++ b/Setup/mail_config.json
@@ -1,9 +1,9 @@
 {
   "EMAIL_CONFIG": {
-    "IMAP_SERVER": "imap.mail.yahoo.co.jp",
-    "IMAP_PORT": 993,
-    "EMAIL_ADDRESS": "sharkguragura_666@yahoo.co.jp",
-    "APP_PASSWORD": "asd.6933562",
+    "IMAP_SERVER": "YOUR EMAIL IMAP SERVER",
+    "IMAP_PORT": "YOUR IMAP PORT",
+    "EMAIL_ADDRESS": "YOUR EMAIL ADDRESS",
+    "APP_PASSWORD": "YOUR APP PASSWORD",
     "TIME_AREA": "Asia",
     "TIME_NATION": "Tokyo",
     "THRESHOLD": {
