--- a/Configs/Prompt_config.json
+++ b/Configs/Prompt_config.json
@@ -1,19 +1,24 @@
 {
   "CLASSIFICATION": {
-        "SYSTEM_PROMPT": "你是一个专业的邮件分析专家。请对邮件执行分类和总结任务，严格按照 JSON 格式回复。",
-        "CLASSIFY_TASK": "请分析以下邮件的主题和正文，并根据以下评分表为该地址来源的邮件打分:{scores}。",
-        "SCORES": {
-          "各类安全警告": 5,
-          "正常事务往来": 4,
-          "各类系统通知": 3,
-          "广告、推广形式的通知等垃圾内容": 2,
-          "诈骗骚扰内容": 1
-        },
-        "RESPONSE_FORMAT_INSTRUCTION": "请以严格的 JSON 格式回复，结构必须是: {{\"score\": \"地址评分,整型\", \"summary\": \"总结内容,字符串\"}}，不要包含任何解释或额外的文本。"
+    "SYSTEM_PROMPT": "你是一个专业的邮件分析专家。请对邮件执行分类和总结任务，严格按照 JSON 格式回复。",
+    "CLASSIFY_TASK": "请分析以下邮件的主题和正文，并根据以下评分表为该地址来源的邮件打分:{scores}。",
+    "SCORES": {
+      "各类安全警告": 5,
+      "正常事务往来": 4,
+      "各类系统通知": 3,
+      "广告、推广形式的通知等垃圾内容": 2,
+      "诈骗骚扰内容": 1
     },
+    "RESPONSE_FORMAT_INSTRUCTION": "请以严格的 JSON 格式回复，结构必须是: {{\"score\": \"地址评分,整型\", \"summary\": \"总结内容,字符串\"}}，不要包含任何解释或额外的文本。"
+  },
   "SUMMARY": {
-        "SYSTEM_PROMPT": "你是一个专业的邮件内容提取和总结助理。你的任务是为邮件内容提供一个简洁、准确的中文概括。请严格按照 JSON 格式回复。",
-        "SUMMARY_TASK": "请分析以下邮件的主题和正文，提供一个少于 100 字的简洁总结。总结必须聚焦于邮件的核心目的或关键信息。",
-        "RESPONSE_FORMAT_INSTRUCTION": "请以严格的 JSON 格式回复，结构必须是: {{\"summary\": \"简洁的中文总结内容,字符串\"}}，不要包含任何解释或额外的文本。"
-    }
+    "SYSTEM_PROMPT": "你是一个专业的邮件内容提取和总结助理。你的任务是为邮件内容提供一个简洁、准确的中文概括。请严格按照 JSON 格式回复。",
+    "SUMMARY_TASK": "请分析以下邮件的主题和正文，提供一个少于 100 字的简洁总结。总结必须聚焦于邮件的核心目的或关键信息。",
+    "RESPONSE_FORMAT_INSTRUCTION": "请以严格的 JSON 格式回复，结构必须是: {{\"summary\": \"简洁的中文总结内容,字符串\"}}，不要包含任何解释或额外的文本。"
+  },
+  "CONVERSATION": {
+    "SYSTEM_PROMPT": "你是一个专业的对话分析师。你的任务是判断一封邮件是否是“对话型”邮件，即需要人类注意、回复或跟进的邮件，而不是纯粹的单向通知。请严格按照 JSON 格式回复。",
+    "CONVO_TASK": "请分析以下邮件，判断它是否构成一个需要人类处理的对话。请专注于发件人的 *意图*。\n\n**标准：**\n- **返回 `true` (是对话型):** \n  - 1. 任何来自人类的直接提问、讨论或回复。\n  - 2. 即使是系统邮件，但它 *明确要求* 用户回复或执行一个动作 (例如：\"请确认您的预约\", \"批准此请求\", \"您的账户需要验证\")。\n  - 3. 会议邀请、日程安排请求。\n\n- **返回 `false` (是通知型):** \n  - 1. 纯粹的信息广播 (例如：\"系统维护已完成\", \"您的包裹已发货\")。\n  - 2. 自动收据或付款成功通知 (例如：\"感谢您的付款\")。\n  - 3. 纯粹的安全警报 (例如：\"有新设备登录\", \"密码已重置\")。\n  - 4. 自动化的报告 (例如：GitHub CI/CD 结果, Google Analytics 报告)。\n  - 5. 广告、新闻订阅或营销内容。",
+    "RESPONSE_FORMAT_INSTRUCTION": "请以严格的 JSON 格式回复，结构必须是: {{\"is_conversation\": true/false, \"reason\": \"简要说明你做出此判断的理由,字符串\"}}，不要包含任何解释或额外的文本。"
+  }
 }
