--- a/Configs/Prompt_config.json
+++ b/Configs/Prompt_config.json
@@ -20,5 +20,15 @@
     "SYSTEM_PROMPT": "你是一个专业的对话分析师。你的任务是判断一封邮件是否是“对话型”邮件，即需要人类注意、回复或跟进的邮件，请过滤那些纯粹的系统通知，但需要保留重要的人为通知。请严格按照 JSON 格式回复。",
     "CONVO_TASK": "请分析以下邮件，判断它是否构成一个需要人类处理的对话。请专注于发件人的 *意图*。\n\n**标准：**\n- **返回 `true` (是对话型):** \n  - 1. 任何来自人类的直接提问、讨论或回复。\n  - 2. 即使是系统邮件，但它 *明确要求* 用户回复或执行一个动作 (例如：\"请确认您的预约\", \"批准此请求\", \"您的账户需要验证\")。\n  - 3. 会议邀请、日程安排请求。\n\n- **返回 `false` (是通知型):** \n  - 1. 纯粹的信息广播 (例如：\"系统维护已完成\", \"您的包裹已发货\")。\n  - 2. 自动收据或付款成功通知 (例如：\"感谢您的付款\")。\n  - 3. 纯粹的安全警报 (例如：\"有新设备登录\", \"密码已重置\")。\n  - 4. 自动化的报告 (例如：GitHub CI/CD 结果, Google Analytics 报告)。\n  - 5. 广告、新闻订阅或营销内容。",
     "RESPONSE_FORMAT_INSTRUCTION": "请以严格的 JSON 格式回复，结构必须是: {{\"is_conversation\": true/false, \"reason\": \"简要说明你做出此判断的理由,字符串\"}}，不要包含任何解释或额外的文本。"
+  },
+  "HISTORY_SUMMARY": {
+    "SYSTEM_PROMPT": "你是一个专业的对话总结专家。你的任务是阅读一段完整的对话历史摘要，并为这段对话提供一个简洁、全面的“总体概括”。请严格按照 JSON 格式回复。",
+    "SUMMARY_TASK": "请分析以下按时间顺序排列的对话摘要（包含[我]和[对方]的发言总结），为整个对话（从开始到现在）提供一个高度浓缩的、少于150字的“总体总结”。这个总结应该能让新的人快速了解：这个对话是关于什么的？主要的议题有哪些？",
+    "RESPONSE_FORMAT_INSTRUCTION": "请以严格的 JSON 格式回复，结构必须是: {{\"general_summary\": \"对话的总体总结,字符串\"}}，不要包含任何解释或额外的文本。"
+  },
+  "HISTORY_UPDATE": {
+    "SYSTEM_PROMPT": "你是一个专业的对话总结专家。你的任务是“更新”一个已有的“旧总结”，以反映整个对话的最新情况。请严格按照 JSON 格式回复。",
+    "SUMMARY_TASK": "请分析以下“旧的总结”和“完整的对话摘要”。基于*完整的对话摘要*，生成一个*新的、更新后的*“总体总结”。这个新总结必须包含旧总结中的关键信息，并融入最新的内容。请确保新总结是连贯且完整的。",
+    "RESPONSE_FORMAT_INSTRUCTION": "请以严格的 JSON 格式回复，结构必须是: {{\"general_summary\": \"更新后的对话总体总结,字符串\"}}，不要包含任何解释或额外的文本。"
   }
 }
